tweak(plugins): adjust and fix alignment of Bases list view items

--- a/src/20_markdown/__markdown.scss
+++ b/src/20_markdown/__markdown.scss
@@ -176,7 +176,7 @@ input.metadata-input {
 .bases-table-cell[data-property-type="tags"] .multi-select-pill,
 .metadata-property[data-property-key="tags"] .multi-select-pill {
 	--pill-color: var(--tag-color);
-	--pill-color-remove: var(--color-accent-1);
+	--pill-color-remove: var(--color-accent-2);
 	--pill-color-remove-hover: var(--text-on-accent) !important;
 }
 .bases-table-cell[data-property-type="tags"] .multi-select-pill-remove-button:hover,
